--- a/src/components/MiddleSection.css
+++ b/src/components/MiddleSection.css
@@ -3,8 +3,8 @@
   flex-direction: column;
   align-items: center;
   position: absolute;
-  top: 50%;
   left: 50%;
+  top: 350px;
   transform: translate(-50%, -50%);
   background-color: transparent;
   opacity: 0; /* Start fully transparent */
