--- a/src/components/SkillsSection.css
+++ b/src/components/SkillsSection.css
@@ -25,8 +25,22 @@
 
 .skills-list {
   display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
+  flex-direction:row;
+
+}
+
+.right-side{
+  flex: 1;
+  margin: 5px;
+  padding: 10px;
+  max-width: auto;
+}
+
+.left-side{
+  flex: 1;
+  margin: 5px;
+  padding: 10px;
+  max-width: auto;
 }
 
 .skill {
